sails/macros/tests/ui/gservice_fails_to_parse_service_impl.stderr
error: `gservice` attribute can be applied to impls only: expected `impl`
 --> tests/ui/gservice_fails_to_parse_service_impl.rs:4:1
  |
4 | struct MyService;
  | ^^^^^^
